# porter

./: .gitignore  Cargo.toml  INTEGRATIONS.md  PLAN.md
config/: home.toml  work.toml
crates/porter-cli/: Cargo.toml
crates/porter-cli/src/: main.rs
crates/porter-cli/src/commands/: agent.rs  mod.rs  serve.rs  status.rs  task.rs
crates/porter-core/: Cargo.toml
crates/porter-core/src/: config.rs  lib.rs  models.rs
crates/porter-core/src/agents/: mod.rs
crates/porter-core/src/db/: migrations.rs  mod.rs  queries.rs
crates/porter-core/src/integrations/: mod.rs
crates/porter-core/src/skills/: mod.rs
crates/porter-integrations/: Cargo.toml
crates/porter-integrations/src/: lib.rs
crates/porter-integrations/src/tasks/: mod.rs
crates/porter-server/: Cargo.toml
crates/porter-server/src/: lib.rs
crates/porter-server/src/api/: agents.rs  health.rs  integrations.rs  mod.rs  skills.rs  tasks.rs  webhooks.rs
crates/porter-server/src/middleware/: mod.rs
crates/porter-server/src/ws/: mod.rs
crates/porter-skills/: Cargo.toml
crates/porter-skills/src/: lib.rs
crates/porter-skills/src/dining/: mod.rs
crates/porter-skills/src/tasks/: mod.rs
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/agents/: page.tsx
web/src/app/agents/[id]/: page.tsx
web/src/app/integrations/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/skills/: page.tsx
web/src/app/tasks/: page.tsx
web/src/components/dashboard/: status-card.tsx
web/src/components/layout/: providers.tsx  sidebar.tsx
web/src/components/tasks/: create-task-dialog.tsx  task-card.tsx
web/src/hooks/: use-server-status.ts  use-websocket.ts
web/src/lib/: api.ts  store.ts  ws.ts
